Add disqus comment count javascript

--- a/themes/hugo-theme-minos-cpbotha/layouts/partials/footer.html
+++ b/themes/hugo-theme-minos-cpbotha/layouts/partials/footer.html
@@ -39,4 +39,9 @@
             }
         });
     </script>
+
+    <!-- cpbotha: pull in disqus comment count, this will rewrite disqus_thread href above!  -->
+    {{ if .Site.DisqusShortname }}
+    <script id="dsq-count-scr" src="//cpbotha.disqus.com/count.js" async></script>
+    {{ end }}
 </footer>
