Close img tag with />

--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -32,4 +32,4 @@
   {{ else }}
     src="{{ $src.RelPermalink }}" 
   {{ end }}
-  {{ with .Get "alt" }}alt='{{.}}'{{ end }}>
+  {{ with .Get "alt" }}alt='{{.}}'{{ end }} />
