Make img shortcode default to small image
It was defaulting to the full size, which broke the mailchimp RSS to email with
oversized images.

--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -27,9 +27,8 @@
   {{ if ge $src.Width "1500" }}
     {{ with $large.RelPermalink }}, {{.}} 1500w {{ end }}
   {{ end }}'
-  {{ if .Get $medium }}
-    src="{{ $medium.RelPermalink }}" 
-  {{ else }}
-    src="{{ $src.RelPermalink }}" 
-  {{ end }}
+
+  {{/* if no support for srcset, we load small (800px) -- hopefully better for RSS feed to mailchimp! */}}
+  src="{{ $small.RelPermalink }}" 
+
   {{ with .Get "alt" }}alt='{{.}}'{{ end }} />
