--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,4 +1,5 @@
-{{/* adapted from https://laurakalbag.com/processing-responsive-images-with-hugo/ */}}
+{{/* modifications by cpbotha, originally from https://laurakalbag.com/processing-responsive-images-with-hugo/ */}}
+
 {{/* get file that matches the filename as specified as src="" in shortcode */}}
 {{ $src := .Page.Resources.GetMatch (printf "*%s*" (.Get "src")) }}
 
