--- a/themes/hugo-theme-minos-cpbotha/layouts/partials/og.html
+++ b/themes/hugo-theme-minos-cpbotha/layouts/partials/og.html
@@ -1,9 +1,11 @@
-{{/* cpbotha: expand ogimage base name to full resource image URL!  */}}
+{{/* cpbotha: expand ogimage base name to 800px resized version of resource image URL!  */}}
     <meta property="og:title" content="{{ if .Params.ogtitle }}{{ .Params.ogtitle }}{{ else }}{{ .Title }}{{ end }}" />
     <meta property="og:description" content="{{ if .Params.ogdescription }}{{ .Params.ogdescription }}{{ else }}{{ .Site.Params.Description }}{{ end }}" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:url" content="{{ .Permalink }}" />
     {{ if .Params.ogimage }}
-    <meta property="og:image" content="{{ (.Resources.GetMatch .Params.ogimage).Permalink }}" />
+    {{ $src := .Resources.GetMatch .Params.ogimage }}
+    {{ $small := ($src.Resize "800x") }}
+    <meta property="og:image" content="{{ $small.Permalink }}" />
     {{ end }}
