Fall back to default if no title in archive

--- a/layouts/shortcodes/archive.html
+++ b/layouts/shortcodes/archive.html
@@ -14,7 +14,7 @@ https://rohanverma.net/blog/2019/11/15/archive-pages-group-by-year-hugo/
 {{if gt $prev (.Date.Format "2006")}}
 ## {{ .Date.Format "2006" }}
 {{end}}
-{{.Date.Format "02 Jan"}} -- [{{.Title}}]({{.Permalink}})
+{{.Date.Format "02 Jan"}} -- [{{ default "Untitled" .Title}}]({{.Permalink}})
 {{ $prev = .Date.Format "2006"}}
 {{end}}
 {{end}}
