--- a/themes/hugo-theme-minos-cpbotha/layouts/partials/footer.html
+++ b/themes/hugo-theme-minos-cpbotha/layouts/partials/footer.html
@@ -1,61 +1,91 @@
 <footer id="footer">
-
   <!-- cpbotha: hack and slash DDG search in here -->
   <div id="search-form-wrap" class="">
     <form class="search-form" method="get" action="https://duckduckgo.com/">
-      <input type="search" name="q" class="search-text" placeholder="{{ i18n "search_placeholder" }}" title="{{ i18n "search_title" }}" size="{{ $.Param "searchSize" | default "20" }}" maxlength="128">
-      <input type="hidden" name="sites" value="cpbotha.net">
-      <input type="submit" value="Search site with DDG" class="hidden">
-    </form>              
-</div>
-  
-    <div class="outer">
-        <div id="footer-info" class="inner">
-            &copy; {{ now.Format "2006"}} {{ or .Site.Author.name .Site.Title }}
-            <br />
-            Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> with theme <a href="https://github.com/carsonip/hugo-theme-minos" target="_blank">Minos</a>
-        </div>
+      <input type="search" name="q" class="search-text" placeholder="{{ i18n
+      "search_placeholder" }}" title="{{ i18n "search_title" }}" size="{{
+      $.Param "searchSize" | default "20" }}" maxlength="128">
+      <input type="hidden" name="sites" value="cpbotha.net" />
+      <input type="submit" value="Search site with DDG" class="hidden" />
+    </form>
+  </div>
+
+  <div class="outer">
+    <div id="footer-info" class="inner">
+      &copy; {{ now.Format "2006"}} {{ or .Site.Params.Author.name .Site.Title
+      }}
+      <br />
+      Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> with theme
+      <a href="https://github.com/carsonip/hugo-theme-minos" target="_blank"
+        >Minos</a
+      >
     </div>
-    {{ template "_internal/google_analytics_async.html" . }}
+  </div>
 
-    <!-- cpbotha: change style to solarized-light. used srihash.org to calc URL with sub-resource integrity -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/solarized-light.min.css" integrity="sha384-bFKDPkG3geCujYJIbPornilfOgmYQoPS45Oh/8daqqo1SUwNY06OeHorpgnNvx82" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js" integrity="sha256-KbfTjB0WZ8vvXngdpJGY3Yp3xKk+tttbqClO11anCIU=" crossorigin="anonymous"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+  <!-- cpbotha: change style to solarized-light. used srihash.org to calc URL with sub-resource integrity -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/solarized-light.min.css"
+    integrity="sha384-bFKDPkG3geCujYJIbPornilfOgmYQoPS45Oh/8daqqo1SUwNY06OeHorpgnNvx82"
+    crossorigin="anonymous"
+  />
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"
+    integrity="sha256-KbfTjB0WZ8vvXngdpJGY3Yp3xKk+tttbqClO11anCIU="
+    crossorigin="anonymous"
+  ></script>
+  <script>
+    hljs.initHighlightingOnLoad();
+  </script>
 
-    {{ if $.Param "katex" }}
+  {{ if $.Param "katex" }}
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/katex.min.css" integrity="sha384-Juol1FqnotbkyZUT5Z7gUPjQ9gzlwCENvUZTpQBAPxtusdwFLRy382PSDx5UUJ4/" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/katex.min.js" integrity="sha384-97gW6UIJxnlKemYavrqDHSX3SiygeOwIZhwyOKRfSaf0JWKRVj9hLASHgFTzT+0O" crossorigin="anonymous"></script>
-    <script>katexOpts = {delimiters: [
-  {left: "$$", right: "$$", display: true},
-  {left: "\\(", right: "\\)", display: false},
-  {left: "\\begin{equation}", right: "\\end{equation}", display: true},
-    {left: "\\begin{align}", right: "\\end{align}", display: true},
-  {left: "\\begin{aligned}", right: "\\end{aligned}", display: true},    
-  {left: "\\begin{alignat}", right: "\\end{alignat}", display: true},
-  {left: "\\begin{gather}", right: "\\end{gather}", display: true},
-  {left: "\\begin{CD}", right: "\\end{CD}", display: true},
-  {left: "\\[", right: "\\]", display: true}
-]};</script>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous"
-            onload="renderMathInElement(document.body, katexOpts);"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/katex.min.css"
+    integrity="sha384-Juol1FqnotbkyZUT5Z7gUPjQ9gzlwCENvUZTpQBAPxtusdwFLRy382PSDx5UUJ4/"
+    crossorigin="anonymous"
+  />
+  <script
+    defer
+    src="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/katex.min.js"
+    integrity="sha384-97gW6UIJxnlKemYavrqDHSX3SiygeOwIZhwyOKRfSaf0JWKRVj9hLASHgFTzT+0O"
+    crossorigin="anonymous"
+  ></script>
+  <script>
+    katexOpts = {
+      delimiters: [
+        { left: "$$", right: "$$", display: true },
+        { left: "\\(", right: "\\)", display: false },
+        { left: "\\begin{equation}", right: "\\end{equation}", display: true },
+        { left: "\\begin{align}", right: "\\end{align}", display: true },
+        { left: "\\begin{aligned}", right: "\\end{aligned}", display: true },
+        { left: "\\begin{alignat}", right: "\\end{alignat}", display: true },
+        { left: "\\begin{gather}", right: "\\end{gather}", display: true },
+        { left: "\\begin{CD}", right: "\\end{CD}", display: true },
+        { left: "\\[", right: "\\]", display: true },
+      ],
+    };
+  </script>
+  <script
+    defer
+    src="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/contrib/auto-render.min.js"
+    integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05"
+    crossorigin="anonymous"
+    onload="renderMathInElement(document.body, katexOpts);"
+  ></script>
 
-    
-    {{ end }}
-    <script>
-        document.getElementById('main-nav-toggle').addEventListener('click', function () {
-            var header = document.getElementById('header');
-            if (header.classList.contains('mobile-on')) {
-                header.classList.remove('mobile-on');
-            } else {
-                header.classList.add('mobile-on');
-            }
-        });
-    </script>
-
-    <!-- cpbotha: pull in disqus comment count, this will rewrite disqus_thread href above!  -->
-    {{ if .Site.DisqusShortname }}
-    <script id="dsq-count-scr" src="//cpbotha.disqus.com/count.js" async></script>
-    {{ end }}
+  {{ end }}
+  <script>
+    document
+      .getElementById("main-nav-toggle")
+      .addEventListener("click", function () {
+        var header = document.getElementById("header");
+        if (header.classList.contains("mobile-on")) {
+          header.classList.remove("mobile-on");
+        } else {
+          header.classList.add("mobile-on");
+        }
+      });
+  </script>
 </footer>
