--- a/themes/hugo-theme-minos-cpbotha/layouts/partials/nav.html
+++ b/themes/hugo-theme-minos-cpbotha/layouts/partials/nav.html
@@ -1,33 +1,33 @@
 <!-- this first clause is the same as the hugo-theme-minos nav -->
 <nav id="article-nav">
-    {{ if .NextPage }}
-    <a href="{{ .NextPage.RelPermalink }}" id="article-nav-newer" class="article-nav-link-wrap">
-        <div class="article-nav-title"><span>&lt;</span>&nbsp;
-            {{ .NextPage.Title }}
-        </div>
-    </a>
-    {{ end }}
-    {{ if .PrevPage }}
-    <a href="{{ .PrevPage.RelPermalink }}" id="article-nav-older" class="article-nav-link-wrap">
-        <div class="article-nav-title">{{ .PrevPage.Title  }}&nbsp;<span>&gt;</span></div>
-    </a>
-    {{ end }}
+  {{ if .Next }}
+  <a
+    href="{{ .Next.RelPermalink }}"
+    id="article-nav-newer"
+    class="article-nav-link-wrap"
+  >
+    <div class="article-nav-title">
+      <span>&lt;</span>&nbsp; {{ .Next.Title }}
+    </div>
+  </a>
+  {{ end }} {{ if .Prev }}
+  <a
+    href="{{ .Prev.RelPermalink }}"
+    id="article-nav-older"
+    class="article-nav-link-wrap"
+  >
+    <div class="article-nav-title">
+      {{ .Prev.Title }}&nbsp;<span>&gt;</span>
+    </div>
+  </a>
+  {{ end }}
 </nav>
 
 <!-- here cpbotha added built-in hugo related pages display, overriding whatever is in theme nav.html -->
-{{ $related := .Site.RegularPages.Related . | first 3 }}
-{{ with $related }}
+{{ $related := .Site.RegularPages.Related . | first 3 }} {{ with $related }}
 <div class="article-footer">
-  Related posts:
-  {{ range . }}
+  Related posts: {{ range . }}
   <a href="{{ .RelPermalink }}">🌤 {{ .Title }}</a>
   {{ end }}
 </div>
 {{ end }}
-
-
-
-
-
-
-    
